[tool.poetry]
name = "vehicular-insurance-fraud-detection"
version = "0.1.0"
description = ""
authors = ["Ryan Rogers <rrogers522@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
kaggle = "^1.6.6"
jupyter = "^1.0.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
